# orquestra-quantum

./: README.md  list.json  pyproject.toml  setup.cfg
.github/workflows/: coverage.yml  publish_release.yml  style.yml
actions/publish-release/: action.yml
src/orquestra/quantum/: evolution.py  measurement.py  measurements.py  symbolic_simulator.py  trackers.py  typing.py  utils.py  vqe_utils.py  wavefunction.py
src/orquestra/quantum/api/: __init__.py  backend.py  backend_test.py  circuit_runner.py  circuit_runner_contract.py  circuit_runner_contracts.py  estimation.py  estimator_contract.py  gate_model_device.py  gate_model_simulator.py  gate_model_simulator_contracts.py  simulator.py  wavefunction_simulator.py  wavefunction_simulator_contracts.py
src/orquestra/quantum/backends/: __init__.py  symbolic_backend.py  symbolic_simulator.py  trackers.py
src/orquestra/quantum/circuits/: __init__.py  _builtin_gates.py  _circuit.py  _gates.py  _itertools.py  _matrices.py  _operations.py  _serde.py  _testing.py  _wavefunction_operations.py  layouts.py
src/orquestra/quantum/decompositions/: __init__.py  _decomposition.py  _orquestra_decompositions.py  _zquantum_decompositions.py
src/orquestra/quantum/distribution/: clipped_negative_log_likelihood.py  jensen_shannon_divergence.py  mmd.py
src/orquestra/quantum/distributions/: BAS_dataset.py  __init__.py  _measurement_outcome_distribution.py  clipped_negative_log_likelihood.py  jensen_shannon_divergence.py  mmd.py  target_thermal_states.py
src/orquestra/quantum/estimation/: __init__.py  _estimation.py
src/orquestra/quantum/interfaces/: backend.py  backend_test.py  estimation.py  estimator_contract.py
src/orquestra/quantum/measurements/: __init__.py  expectation_values.py  measurements.py  parities.py
src/orquestra/quantum/openfermion/: __init__.py
src/orquestra/quantum/operators/: __init__.py  _io.py  _pauli_operators.py  _utils.py
src/orquestra/quantum/runners/: symbolic_simulator.py  trackers.py
src/orquestra/quantum/testing/: __init__.py  _initialize.py  generate_cases_for_backend_tests.py  mocks.py  test_cases_for_backend_tests.py
subtrees/z_quantum_actions/actions/publish-release/: action.yml
tests/: mock_objects.py
tests/orquestra/quantum/: evolution_test.py  measurement_test.py  symbolic_simulator_test.py  trackers_test.py  utils_test.py  vqe_utils_test.py  vqe_utils_test.python  wavefunction_test.py
tests/orquestra/quantum/api/: estimator_contract_test.py
tests/orquestra/quantum/backends/: symbolic_simulator_test.py  (+1 more)
(+131 files in other folders)
