[metadata]
name = orquestra-quantum
description = "Orquestra's library with basic quantum operations"
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/zapatacomputing/orquestra-quantum
author = Zapata Computing Inc.
author_email = info@zapatacomputing.com,
license = Apache Software License 2.0
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: OSI Approved :: Apache Software License
    Topic :: Scientific/Engineering


[options]
zip_safe = False
include_package_data = True
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.7,!=3.9.7

install_requires =
    numpy>=1.20
    scipy>=1.4.1
    sympy>=1.5,<=1.9
    matplotlib>=2.2.5
    scikit-learn>=1.0
    lea>=3.2.0
    python-rapidjson>=1.5
    h5py>=2.8


[options.packages.find]
where = src

# TODO: this is a temporary solution until we find a good way 
# to have consistent dev requirements across multiple repositories
[options.extras_require]
dev =
    black~=22.3
    flake8~=3.9.0
    isort~=5.9.0
    mypy~=0.910
    pytest~=6.2
    pytest-cov>=2.12

[flake8]
ignore = E203,E266,F401,W605
max-line-length = 88
exclude = src/orquestra/quantum/openfermion/,tests/orquestra/quantum/openfermion_tests/
